add home section and about section

--- a/assets/sass/bulma.scss
+++ b/assets/sass/bulma.scss
@@ -1,6 +1,6 @@
 @import "../../node_modules/bulma/sass/utilities/_all.sass";
 
-$primary: #a60b10;
+$primary: #dc2626;
 $primary-light: findLightColor($primary);
 $primary-dark: findDarkColor($primary);
 $primary-invert: findColorInvert($primary);
