--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,61 +1,4 @@
-@import "bulma/sass/utilities/_all";
-
-$primary: #dc2626;
-$primary-light: findLightColor($primary);
-$primary-dark: findDarkColor($primary);
-$primary-invert: findColorInvert($primary);
-
-$custom-colors: null !default;
-$custom-shades: null !default;
-
-$colors: mergeColorMaps(("white": ($white,
-				$black,
-			),
-			"black": ($black,
-				$white,
-			),
-			"light": ($light,
-				$light-invert,
-			),
-			"dark": ($dark,
-				$dark-invert,
-			),
-			"primary": ($primary,
-				$primary-invert,
-				$primary-light,
-				$primary-dark,
-			),
-			"link": ($link,
-				$link-invert,
-				$link-light,
-				$link-dark,
-			),
-			"info": ($info,
-				$info-invert,
-				$info-light,
-				$info-dark,
-			),
-			"success": ($success,
-				$success-invert,
-				$success-light,
-				$success-dark,
-			),
-			"warning": ($warning,
-				$warning-invert,
-				$warning-light,
-				$warning-dark,
-			),
-			"danger": ($danger,
-				$danger-invert,
-				$danger-light,
-				$danger-dark,
-			),
-		),
-		$custom-colors);
-
-$link: $primary;
-$link-invert: $primary-invert;
-$link-focus-border: $primary;
-
-@import "bulma/bulma";
-@import '@oruga-ui/theme-bulma/dist/scss/bulma';
+@use "/node_modules/bulma/sass/index" with (
+	$primary: #dc2626,
+	$link: #dc2626
+);
